tests/baselines/reference/scannerImportDeclaration1.errors.txt
==== tests/cases/conformance/scanner/ecmascript5/scannerImportDeclaration1.ts (1 errors) ====
    import TypeScript = TypeScriptServices.TypeScript;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeScriptServices'.